--- a/pom.xml
+++ b/pom.xml
@@ -327,11 +327,11 @@
             <version>${joda.version}</version>
         </dependency>
 
-        <dependency>
+        <!-- <dependency>
             <groupId>org.apache.kafka</groupId>
             <artifactId>kafka-clients</artifactId>
             <version>${kafka.version}</version>
-        </dependency>
+        </dependency> -->
 
         <!-- Add slf4j API frontend binding with JUL backend -->
         <dependency>
